# Battery_Sim

./: CMakeLists.txt  README.md
include/mbh/: grid.hpp  halo.hpp  io.hpp  laplacian.hpp  params.hpp  source.hpp  time_integrators.hpp
scripts/: plot_maxT.py  plot_slice.py
src/: main.cpp
